# xdlake

./: .gitpod.Dockerfile  LICENSE  Makefile  README.md  probe.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: cicd.yml  test.yml  tox.yml
tests/: __init__.py  base_xdlake_test.py  test_compatibility.py  test_compatibility_spark.py  test_dataset.py  test_delta_log.py  test_storage.py  test_xdlake.py  test_xdlake_cloud.py  utils.py
xdlake/: __init__.py  dataset.py  dataset_utils.py  delta_log.py  storage.py  utils.py
xdlake/delta_log/: __init__.py  actions.py  schema.py  statistics.py
